--- a/src/app/assets/css/main.css
+++ b/src/app/assets/css/main.css
@@ -58,7 +58,7 @@
 	margin-top: 20px;
 	display: flex;
 	flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: flex-start;
 }
 .artist-results {
 	width: 200px;
