--- a/src/app/assets/css/main.css
+++ b/src/app/assets/css/main.css
@@ -4,13 +4,23 @@
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Poppins", sans-serif;
-	color: #ffffff;
-	background-color: #283044;
 }
 .container {
 	width: 100%;
 	max-width: 1200px;
 	margin: 0 auto;
+}
+.home {
+	height: 100vh;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	padding: 0 20px;
+}
+.search {
+	width: 100%;
 }
 .search-box {
 	width: 100%;
@@ -26,6 +36,7 @@
 	margin: 0 auto;
 	display: flex;
 	justify-content: space-between;
+	text-transform: capitalize;
 	align-items: center;
 	font-size: 20px;
 	padding: 8px;
@@ -54,26 +65,64 @@
 	border-bottom-left-radius: 0;
 	border-top-left-radius: 0;
 }
+h1 {
+	text-transform: capitalize;
+}
 .results {
-	margin-top: 20px;
 	display: flex;
 	flex-wrap: wrap;
-    justify-content: flex-start;
+	margin-bottom: 20px;
+	justify-content: space-evenly;
 }
-.artist-results {
+.artist-results,
+.song-results {
 	width: 200px;
-	border: 1px solid #ccc;
 	padding: 10px;
 	margin: 10px 10px 0 0;
 	border-radius: 5px;
+	text-align: center;
 }
 .artist-results img {
 	width: 100%;
 	height: auto;
+	border-radius: 50%;
 }
 .shadow-1 {
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 .shadow-1:hover {
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+.song-results{
+	padding: 10px;
+	margin: 10px 10px 0 0;
+	border-radius: 5px;
+	text-align: center;
+	display: flex;
+    flex-direction: column;
+    justify-content: space-between
+}
+.song-results h1 {
+	color: #e85f5c;
+}
+.song-results img {
+	width: 180px;
+	height: auto;
+}
+section {
+	margin-top: 20px;
+}
+button {
+	width: 20%;
+	max-width: 1200px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 20px;
+	padding: 10px;
+	border: none;
+	background-color: #e85f5c;
+	color: #ffffff;
+	border-radius: 5px;
 }
