--- a/src/app/assets/css/main.css
+++ b/src/app/assets/css/main.css
@@ -87,20 +87,45 @@ h1 {
 	height: auto;
 	border-radius: 50%;
 }
+.modal {
+	position: absolute;
+    z-index: 2;
+    top: 0;
+    background-color: white;
+    padding: 20px;
+    height: 100%;
+    width: 100%;
+    left: 0;
+	overflow-y:scroll;
+}
+.close{
+	display: flex;
+    flex-direction: row-reverse;
+	color: #797979;
+}
+.details{
+	display: flex;
+	align-items: end;
+}
+.avatar{
+	width: 200px;
+	border-radius: 50%;
+	margin-right: 30px;
+}
 .shadow-1 {
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 .shadow-1:hover {
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
-.song-results{
+.song-results {
 	padding: 10px;
 	margin: 10px 10px 0 0;
 	border-radius: 5px;
 	text-align: center;
 	display: flex;
-    flex-direction: column;
-    justify-content: space-between
+	flex-direction: column;
+	justify-content: space-between;
 }
 .song-results h1 {
 	color: #e85f5c;
